fixed overflow text in recipe details

--- a/components/css/main.css
+++ b/components/css/main.css
@@ -109,7 +109,9 @@ input{
 .flexChild:hover{
   opacity: .8;
 }
-.shrink-sides{
+.shrink-left{
   margin-left: 5%;
+}
+.shrink-right{
   margin-right: 5%;
 }
